[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pazuzu-locker"
version = "0.2.0"
description = "Secure file encryption toolkit with remote manifest storage"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "natekali", email = "natekali@users.noreply.github.com"}
]
keywords = ["encryption", "fernet", "security", "ransomware-simulator", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "cryptography>=42.0.5",
    "typer>=0.12.3",
    "rich>=13.7.1",
]

[project.scripts]
pazuzu-locker = "pazuzu_locker.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/natekali/Pazuzu-Locker"
Repository = "https://github.com/natekali/Pazuzu-Locker"
Issues = "https://github.com/natekali/Pazuzu-Locker/issues"

[tool.setuptools]
packages = ["pazuzu_locker", "pazuzu_locker.services", "pazuzu_locker.storage"]
